temporal-verifier/tests/examples/snapshots/fail/lockserver_bug.fly.cvc5.snap
---
source: temporal-verifier/tests/test_examples.rs
description: "--expect-fail --all-solvers -- verify tests/examples/fail/lockserver_bug.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
verification errors:
error: invariant is not inductive
 = counter example:
   lock_msg(@node_0) = false
   lock_msg(@node_1) = false
   grant_msg(@node_0) = true
   grant_msg(@node_1) = true
   unlock_msg(@node_0) = true
   unlock_msg(@node_1) = true
   holds_lock(@node_0) = true
   holds_lock(@node_1) = false
   server_holds_lock = true

error: invariant is not inductive
 = counter example:
   lock_msg(@node_0) = true
   grant_msg(@node_0) = true
   unlock_msg(@node_0) = true
   holds_lock(@node_0) = true
   server_holds_lock = true


