temporal-verifier/tests/examples/snapshots/fail/safety1_init.fly.cvc5.snap
---
source: temporal-verifier/tests/test_examples.rs
description: "--expect-fail --all-solvers -- verify tests/examples/fail/safety1_init.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
verification errors:
error: init does not imply invariant
   ┌─ tests/examples/fail/safety1_init.fly:10:1
   │
10 │ assert always !p & !q
   │ ^^^^^^^^^^^^^^^^^^^^^
   │
   = counter example:
     state 0:
     p = true
     q = false


