temporal-verifier/tests/examples/snapshots/fail/safety2_missing_inv.fly.cvc4.snap
---
source: temporal-verifier/tests/test_examples.rs
description: "--expect-fail --all-solvers -- verify tests/examples/fail/safety2_missing_inv.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
verification errors:
error: invariant is not inductive
   ┌─ tests/examples/fail/safety2_missing_inv.fly:13:5
   │
13 │     invariant y
   │     ^^^^^^^^^^^
   │
   = counter example:
     state 0:
     x = true
     y = true
     z = false
     
     state 1:
     x = true
     y = false
     z = false


