temporal-verifier/tests/examples/snapshots/fail/safety3_extra_inv.fly.1.cvc4.snap
---
source: tests/test_examples.rs
description: "--expect-fail --all-solvers --name=1 -- verify tests/examples/fail/safety3_extra_inv.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
verification errors:
error: invariant is not inductive
   ┌─ tests/examples/fail/safety3_extra_inv.fly:16:5
   │
16 │     invariant z
   │     ^^^^^^^^^^^
   │
   = counter example:
     x = true
     y = true
     z = true


