temporal-verifier/tests/examples/snapshots/fail/safety3_extra_inv.fly.houdini.z3.snap
---
source: temporal-verifier/tests/test_examples.rs
description: "--all-solvers --name=houdini -- infer houdini tests/examples/fail/safety3_extra_inv.fly"
expression: combined_stdout_stderr
---
# inferred invariant:
assert always x
proof {
  invariant x
  invariant y
}
verifies!

======== STDERR: ===========

